Change endpoint url from /infrastructure-descriptors to /companies
